- when “forma pago” == efectivo dont show fields (# documento, cuenta, fecha cheque, fecha entrega) - extra column called valor in each invoice

--- a/android_vendor_itinerary/app/src/main/res/values/strings.xml
+++ b/android_vendor_itinerary/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="id">ID</string>
     <string name="factura">Factura</string>
     <string name="saldo">Saldo</string>
+    <string name="valor">Valor</string>
 </resources>
